meet feature responsive style done

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
                 <li><a href="">Contact</a></li>
                 <li><a href="">About</a></li>
                 <p><i class="fa-solid fa-bars"></i></p>
-            
+
             </ul>
         </nav>
         <!-- bennar section  -->
@@ -27,7 +27,8 @@
         <section class="bennar">
             <div class="bennar-content">
                 <h1>Get body in <br> <span>shape</span> & stay <br> healthy</h1>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Iste voluptas <br> iure reiciendis eaque aperiam fugiat!</p>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Iste voluptas <br> iure reiciendis eaque
+                    aperiam fugiat!</p>
                 <div>
                     <button class="btn-primary">Join club now</button>
                     <button class="btn-secondary">Download App</button>
@@ -50,7 +51,8 @@
     <main>
         <section class="habit-section">
             <h2 class="section-title text-center">Change Your Habits</h2>
-            <p class="section-description text-center">We believe fitness should be accessible to everyone, everywhere, regardless of income or <br> access to a gym.</p>
+            <p class="section-description text-center">We believe fitness should be accessible to everyone, everywhere,
+                regardless of income or <br> access to a gym.</p>
             <div class="crad-container">
                 <div class="card-contect">
                     <img src="./images/image 3.png" alt="">
@@ -76,69 +78,83 @@
         </section>
 
         <!-- run section -->
-         <section class="run-section">
+        <section class="run-section">
             <div>
                 <h2 class="section-title">Run an Extra <br> Mile Easily</h2>
-                <p class="section-description">We believe fitness should be accessible  to everyone,<br> everywhere, regardless of income or access to a gym. <br>With hundreds of professional workouts.</p>
-                <button class="btn-primary">Join Now</button>
+                <p class="section-description">We believe fitness should be accessible to everyone,<br> everywhere,
+                    regardless of income or access to a gym. <br>With hundreds of professional workouts.</p>
+                <div class="btn-container"><button class="btn-primary">Join Now</button></div>
             </div>
             <div class="run-img">
                 <img src="./images/run.jpg" alt="">
             </div>
-         </section>
+        </section>
 
-         <!-- meet feature  -->
-          <section class="meet-feature">
+        <!-- meet feature  -->
+        <section class="meet-feature">
             <h2 class="section-title text-center">Meet Our Team</h2>
-            <p class="section-description text-center">We believe fitness should be accessible to everyone, everywhere, regardless of income or access to a gym.</p>
-            <div class="tainer-img-container">
-                <div class="tainer-img">
-                    <div>
-                        <img src="./images/trainer1.png" alt="">
+            <p class="section-description text-center">We believe fitness should be accessible to everyone, everywhere,
+                regardless of income or access to a gym.</p>
+            <div class="tainer-bg-container">
+                <div class="tainer-img-container">
+                    <div class="tainer-img">
+                        <div>
+                            <img src="./images/trainer1.png" alt="">
+                        </div>
+                        <div class="tainer-content">
+                            <h4>Jerome Bell</h4>
+                            <p>Trainer</p>
+                        </div>
                     </div>
-                    <h4>Jerome Bell</h4>
-                    <p>Trainer</p>
+                    <div class="tainer-img">
+                        <div>
+                            <img src="./images/trainer2.png" alt="">
+                        </div>
+                        <div class="tainer-content">
+                            <h4>Cameron Williamson</h4>
+                            <p>Trainer</p>
+                        </div>
+                    </div>
+                    <div class="tainer-img">
+                        <div>
+                            <img src="./images/trainer3.png" alt="">
+                        </div>
+                        <div class="tainer-content">
+                            <h4>Darrell Steward</h4>
+                            <p>Trainer</p>
+                        </div>
+                    </div>
+                    <div class="tainer-img">
+                        <div>
+                            <img src="./images/trainer4.png" alt="">
+                        </div>
+                        <div class="tainer-content">
+                            <h4>Dianne Russell</h4>
+                            <p>Trainer</p>
+                        </div>
+                    </div>
+                    <div class="tainer-img">
+                        <div>
+                            <img src="./images/trainer5.png" alt="">
+                        </div>
+                        <div class="tainer-content">
+                            <h4>Cody Fisher</h4>
+                            <p>Trainer</p>
+                        </div>
+                    </div>
+                    <div class="tainer-img">
+                        <div>
+                            <img src="./images/trainer6.png" alt="">
+                        </div>
+                        <div class="tainer-content">
+                            <h4>Theresa Webb</h4>
+                            <p>Trainer</p>
+                        </div>
+                    </div>
                 </div>
-                <div class="tainer-img">
-                    <div>
-                        <img src="./images/trainer2.png" alt="">
-                    </div>
-                    <div >
-                        <h4>Jerome Bell</h4>
-                    <p>Trainer</p>
-                    </div>
-                </div>
-                <div class="tainer-img">
-                    <div>
-                        <img src="./images/trainer3.png" alt="">
-                    </div>
-                    <h4>Jerome Bell</h4>
-                    <p>Trainer</p>
-                </div>
-                <div class="tainer-img">
-                    <div>
-                        <img src="./images/trainer4.png" alt="">
-                    </div>
-                    <h4>Jerome Bell</h4>
-                    <p>Trainer</p>
-                </div>
-                <div class="tainer-img">
-                    <div>
-                        <img src="./images/trainer5.png" alt="">
-                    </div>
-                    <h4>Jerome Bell</h4>
-                    <p>Trainer</p>
-                </div>
-                <div class="tainer-img">
-                    <div>
-                        <img src="./images/trainer6.png" alt="">
-                    </div>
-                    <h4>Jerome Bell</h4>
-                    <p>Trainer</p>
-                </div>
-                
+
             </div>
-          </section>
+        </section>
     </main>
     <footer>
 
