--- a/index.html
+++ b/index.html
@@ -37,12 +37,12 @@
             <div class="img-content">
                 <img src="./images/Images 2.png" alt="">
                 <div class="bennar-videos-content-1">
-                    <h2>500+</h2>
-                    <p>Free Workout Video</p>
+                    <h2 class="text-center">500+</h2>
+                    <p class="text-center section-description">Free Workout Video</p>
                 </div>
                 <div class="bennar-videos-content-2">
-                    <h2>350+</h2>
-                    <p>Video tutorial</p>
+                    <h2 class="text-center">350+</h2>
+                    <p class="section-description text-center">Video tutorial</p>
                 </div>
             </div>
         </section>
@@ -157,7 +157,37 @@
         </section>
     </main>
     <footer>
-
+       <div class="footer-container">
+        <div class="footer-content">
+            <h1>Fitness</h1>
+            <p class="section-description">We believe fitness should be accessible  to everyone,<br> everywhere, regardless of income  or access to <br> a gym. With hundreds of professional workouts.</p>
+        </div>
+        <div class="menu-container">
+            <div>
+                <h3 class="section-subtitle">Get Started</h3>
+                <ul>
+                    <li>Service</li>
+                    <li>Contact Us</li>
+                    <li>Affiliate Program</li>
+                    <li>About Us</li>
+                </ul>
+            </div>
+            <div>
+                <h3 class="section-subtitle">Get Started</h3>
+                <ul>
+                    <li>Fitness</li>
+                    <li>Platform</li>
+                    <li>Workout Libary</li>
+                    <li>App Design</li>
+                </ul>
+            </div>
+        </div>
+        
+       </div>
+      <div class="disclaimer">
+        <hr>
+        <p class="section-description text-center"><small>All right reserved @Fitness 2024</small></p>
+      </div>
     </footer>
 </body>
 
