--- a/index.html
+++ b/index.html
@@ -164,7 +164,7 @@
         </div>
         <div class="menu-container">
             <div>
-                <h3 class="section-subtitle">Get Started</h3>
+                <h3 class="menu-title">Get Started</h3>
                 <ul>
                     <li>Service</li>
                     <li>Contact Us</li>
@@ -173,7 +173,7 @@
                 </ul>
             </div>
             <div>
-                <h3 class="section-subtitle">Get Started</h3>
+                <h3 class="menu-title">Get Started</h3>
                 <ul>
                     <li>Fitness</li>
                     <li>Platform</li>
