bmi calculate section commited

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Iste voluptas <br> iure reiciendis eaque
                     aperiam fugiat!</p>
                 <div>
-                    <button class="btn-primary">Join club now</button>
+                    <button class="btn-primary">Join now</button>
                     <button class="btn-secondary">Download App</button>
                 </div>
             </div>
@@ -90,6 +90,65 @@
             </div>
         </section>
 
+        <!-- Bmi section  -->
+        <section>
+            <h2 class="section-title text-center">BMI Calculator</h2>
+            <p class="section-description text-center">We believe fitness should be accessible to everyone, everywhere,
+                regardless of income or access to a gym.</p>
+            <div class="bmi-section">
+                <div class="bmi-container">
+                    <div class="bmi-table">
+                        <h3>BMI Calculator Chart</h3>
+                        <table>
+                            <tr>
+                                <th>BMI</th>
+                                <th>Weight Status</th>
+                            </tr>
+                            <tr>
+                                <td>Below 18.5</td>
+                                <td>Underweight</td>
+                            </tr>
+                            <tr>
+                                <td>18.5- 24.5</td>
+                                <td>healthy</td>
+                            </tr>
+                            <tr>
+                                <td>25.0-29.9</td>
+                                <td>Overweight</td>
+                            </tr>
+                            <tr>
+                                <td>30.0-and above</td>
+                                <td>Obese</td>
+                            </tr>
+                        </table>
+                    </div>
+                    <div class="bmi-input">
+                        <h3>Calculate your BMI</h3>
+                        <p class="section-description">We believe fitness should be accessible to everyone, everywhere,
+                            regardless of income or access to a gym.</p>
+                        <div>
+                            <div class="input-line-1">
+                                <input class="input" type="text" placeholder="Height/cm">
+                                <input class="input" type="text" placeholder="Weight/kg">
+                            </div>
+                            <div class="input-line-2">
+                                  <input class="input" type="text" placeholder="Age">
+                                
+                                <select class="select-1" name="" pla id="">
+                                    <option value="">Gender</option>
+                                </select>
+                            </div>
+                            <select class="select-2" name="" id="">
+                                <option value="">Select an activity factor</option>
+                            </select>
+                            <div class="bmi-btn">
+                                <button class="btn-primary">Calculate</button>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
         <!-- meet feature  -->
         <section class="meet-feature">
             <h2 class="section-title text-center">Meet Our Team</h2>
@@ -157,37 +216,38 @@
         </section>
     </main>
     <footer>
-       <div class="footer-container">
-        <div class="footer-content">
-            <h1>Fitness</h1>
-            <p class="section-description">We believe fitness should be accessible  to everyone,<br> everywhere, regardless of income  or access to <br> a gym. With hundreds of professional workouts.</p>
-        </div>
-        <div class="menu-container">
-            <div>
-                <h3 class="menu-title">Get Started</h3>
-                <ul>
-                    <li>Service</li>
-                    <li>Contact Us</li>
-                    <li>Affiliate Program</li>
-                    <li>About Us</li>
-                </ul>
+        <div class="footer-container">
+            <div class="footer-content">
+                <h1>Fitness</h1>
+                <p class="section-description">We believe fitness should be accessible to everyone,<br> everywhere,
+                    regardless of income or access to <br> a gym. With hundreds of professional workouts.</p>
             </div>
-            <div>
-                <h3 class="menu-title">Get Started</h3>
-                <ul>
-                    <li>Fitness</li>
-                    <li>Platform</li>
-                    <li>Workout Libary</li>
-                    <li>App Design</li>
-                </ul>
+            <div class="menu-container">
+                <div>
+                    <h3 class="menu-title">Get Started</h3>
+                    <ul>
+                        <li>Service</li>
+                        <li>Contact Us</li>
+                        <li>Affiliate Program</li>
+                        <li>About Us</li>
+                    </ul>
+                </div>
+                <div>
+                    <h3 class="menu-title">Get Started</h3>
+                    <ul>
+                        <li>Fitness</li>
+                        <li>Platform</li>
+                        <li>Workout Libary</li>
+                        <li>App Design</li>
+                    </ul>
+                </div>
             </div>
+
         </div>
-        
-       </div>
-      <div class="disclaimer">
-        <hr>
-        <p class="section-description text-center"><small>All right reserved @Fitness 2024</small></p>
-      </div>
+        <div class="disclaimer">
+            <hr>
+            <p class="section-description text-center"><small>All right reserved @Fitness 2024</small></p>
+        </div>
     </footer>
 </body>
 
