registation form commited

--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Fitness World</title>
     <link rel="stylesheet" href="./styles/style.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
+
 </head>
 
 <body>
@@ -18,11 +20,10 @@
                 <li><a href="">Service</a></li>
                 <li><a href="">Contact</a></li>
                 <li><a href="">About</a></li>
-                <p><i class="fa-solid fa-bars"></i></p>
-
             </ul>
+            <p class="menubar"><i class="fa-solid fa-bars"></i></p>
         </nav>
-        <!-- bennar section  -->
+            <!-- bennar section  -->
 
         <section class="bennar">
             <div class="bennar-content">
@@ -149,6 +150,25 @@
                 </div>
             </div>
         </section>
+         
+        <!-- Registation section  -->
+         <section class="registation-section">
+            <div class="registation-container">
+                <form>
+                    <h2 class="section-title">Registation Form</h2>
+                    <label for="">Name :</label> <br>
+                    <input type="text" placeholder="Your Name"><br>
+                    <label for="">Email:</label> <br>
+                    <input type="email" placeholder="Your Email"><br>
+                    <label for="">Password</label><br>
+                    <input type="password" placeholder="Password">
+                    <input class="btn-primary" type="submit" value="Submit">
+                </form>
+                <div class="registation-img">
+                    <img src="./images/registation.avif" alt="">
+                </div>
+            </div>
+         </section>
         <!-- meet feature  -->
         <section class="meet-feature">
             <h2 class="section-title text-center">Meet Our Team</h2>
